# aoc-2024

./: Cargo.toml  README.md
days/day_01/: Cargo.toml
days/day_01/src/: one.rs  two.rs
days/day_02/: Cargo.toml
days/day_02/src/: one.rs
days/day_03/: Cargo.toml
days/day_04/: Cargo.toml
days/day_05/: Cargo.toml
days/day_06/: Cargo.toml
days/day_07/: Cargo.toml
days/day_08/: Cargo.toml
days/day_09/: Cargo.toml
days/day_10/: Cargo.toml
days/day_11/: Cargo.toml
days/day_12/: Cargo.toml
days/day_13/: Cargo.toml
days/day_14/: Cargo.toml
days/day_14/src/: one.rs
days/day_15/: Cargo.toml
days/day_16/: Cargo.toml
days/day_17/: Cargo.toml
days/day_18/: Cargo.toml
days/day_19/: Cargo.toml
days/day_20/: Cargo.toml
days/day_21/: Cargo.toml
days/day_22/: Cargo.toml
days/day_23/: Cargo.toml
days/day_24/: Cargo.toml
days/day_25/: Cargo.toml
interface/: Cargo.toml
interface/src/: main.rs
utils/: Cargo.toml
utils/src/: common.rs  lib.rs  structs.rs
