[workspace]
resolver = "2"
members = [
    "days/day_01", "days/day_02", "days/day_03", "days/day_04", "days/day_05",
    "days/day_06", "days/day_07", "days/day_08", "days/day_09", "days/day_10",
    "days/day_11", "days/day_12", "days/day_13", "days/day_14", "days/day_15",
    "days/day_16", "days/day_17", "days/day_18", "days/day_19", "days/day_20",
    "days/day_21", "days/day_22", "days/day_23", "days/day_24", "days/day_25",
    "interface",
    "utils"
]

[build]
rustflags = ["-A unused_variables", "-A unused_mut"]