[package]
name = "interface"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
day_01 = { path = "../days/day_01" }
day_02 = { path = "../days/day_02" }
day_03 = { path = "../days/day_03" }
day_04 = { path = "../days/day_04" }
day_05 = { path = "../days/day_05" }
day_06 = { path = "../days/day_06" }
day_07 = { path = "../days/day_07" }
day_08 = { path = "../days/day_08" }
day_09 = { path = "../days/day_09" }
day_10 = { path = "../days/day_10" }
day_11 = { path = "../days/day_11" }
day_12 = { path = "../days/day_12" }
day_13 = { path = "../days/day_13" }
day_14 = { path = "../days/day_14" }
day_15 = { path = "../days/day_15" }
day_16 = { path = "../days/day_16" }
day_17 = { path = "../days/day_17" }
day_18 = { path = "../days/day_18" }
day_19 = { path = "../days/day_19" }
day_20 = { path = "../days/day_20" }
day_21 = { path = "../days/day_21" }
day_22 = { path = "../days/day_22" }
day_23 = { path = "../days/day_23" }
day_24 = { path = "../days/day_24" }
day_25 = { path = "../days/day_25" }
utils = { path = "../utils" }